--- a/ex.html
+++ b/ex.html
@@ -26,9 +26,9 @@
                 <div class="temp"></div>
                 <ul>
 
-                    <li><a href="index1.html">Toerisme</a></li>
-                    <li><a href="hospitals.html">Hospitals</a></li>
+                    <li><a href="index.html">Toerisme</a></li>
                     <li><a href="news.html">News</a></li> 
+                    <li><a href="hospitals.html">Hospitals</a></li>
                     <li><a href="abaut.html">About</a></li>
 
                 </ul>
