--- a/hospitals.html
+++ b/hospitals.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/hospitals.css">
+    
     <link rel="stylesheet" href="./css/index1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospitals in Hamburg</title>
@@ -24,27 +25,29 @@
             <div class="temp"></div>
             <ul>
 
-                <li><a href="#">Toerisme</a></li>
-                <li><a href="hospitals.html">Hospitals</a></li>
+                <li><a href="index.html">Toerisme</a></li>
                 <li><a href="news.html">News</a></li> 
-                <!-- <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>  -->
-
+                <li><a href="hospitals.html">Hospitals</a></li>
+                <li><a href="abaut.html">About</a></li> 
             </ul>
             <img id="img" src="/imeg/h.svg" alt="">
         </nav>
     </div>
     <!-- ////        //////// -->
     <div class="contHaus">
-            <div id="output">
-                <h2 class="h2">Die Namen und Adressen der Krankenhäuser in Hamburg</h2>
-            </div>
+           <div class="res">
+            <h2 class="h2">Gesundheitsnachrichten in Hamburg</h2>
+           </div>
             <div id="nachrecht">
                 <h2 class="h2">Gesundheitsnachrichten in Hamburg</h2>
             </div>
+            <div id="output">
+                <h2 class="h2">Die Namen und Adressen der Krankenhäuser in Hamburg</h2>
+            </div>
     </div>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">var scrolltotop={setting:{startline:100,scrollto:0,scrollduration:1e3,fadeduration:[500,100]},controlHTML:'<img src="https://i1155.photobucket.com/albums/p559/scrolltotop/arrow50.png" />',controlattrs:{offsetx:5,offsety:5},anchorkeyword:"#top",state:{isvisible:!1,shouldvisible:!1},scrollup:function(){this.cssfixedsupport||this.$control.css({opacity:0});var t=isNaN(this.setting.scrollto)?this.setting.scrollto:parseInt(this.setting.scrollto);t="string"==typeof t&&1==jQuery("#"+t).length?jQuery("#"+t).offset().top:0,this.$body.animate({scrollTop:t},this.setting.scrollduration)},keepfixed:function(){var t=jQuery(window),o=t.scrollLeft()+t.width()-this.$control.width()-this.controlattrs.offsetx,s=t.scrollTop()+t.height()-this.$control.height()-this.controlattrs.offsety;this.$control.css({left:o+"px",top:s+"px",zIndex: '500'})},togglecontrol:function(){var t=jQuery(window).scrollTop();this.cssfixedsupport||this.keepfixed(),this.state.shouldvisible=t>=this.setting.startline?!0:!1,this.state.shouldvisible&&!this.state.isvisible?(this.$control.stop().animate({opacity:1},this.setting.fadeduration[0]),this.state.isvisible=!0):0==this.state.shouldvisible&&this.state.isvisible&&(this.$control.stop().animate({opacity:0},this.setting.fadeduration[1]),this.state.isvisible=!1)},init:function(){jQuery(document).ready(function(t){var o=scrolltotop,s=document.all;o.cssfixedsupport=!s||s&&"CSS1Compat"==document.compatMode&&window.XMLHttpRequest,o.$body=t(window.opera?"CSS1Compat"==document.compatMode?"html":"body":"html,body"),o.$control=t('<div id="topcontrol">'+o.controlHTML+"</div>").css({position:o.cssfixedsupport?"fixed":"absolute",bottom:o.controlattrs.offsety,right:o.controlattrs.offsetx,opacity:0,cursor:"pointer"}).attr({title:"Scroll to Top"}).click(function(){return o.scrollup(),!1}).appendTo("body"),document.all&&!window.XMLHttpRequest&&""!=o.$control.text()&&o.$control.css({width:o.$control.width()}),o.togglecontrol(),t('a[href="'+o.anchorkeyword+'"]').click(function(){return o.scrollup(),!1}),t(window).bind("scroll resize",function(t){o.togglecontrol()})})}};scrolltotop.init();</script>
     <script src="./js/hospitals.js">
 
     </script>
