--- a/ex.html
+++ b/ex.html
@@ -37,7 +37,7 @@
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
-                <img id="img" src="/imeg/h.svg" alt="">
+                <img id="img" src="imeg/h.svg" alt="">
             </nav>
         </div>
         <div class="imgNews">
