--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
-                <img id="img" src="/imeg/h.svg" alt="">
+                <img id="img" src="imeg/h.svg" alt="">
             </nav>
         
             <div id="slider">
@@ -98,12 +98,12 @@
                         <h4 id="titels">hamburg stadtpark</h4>
                         <div class="model">
                             <div class="imgCont">
-                                <img src="/imeg/tr1.jpg" alt="" class="img">
+                                <img src="imeg/tr1.jpg" alt="" class="img">
                                 <div class="somImg">
-                                    <div class="som1" ><img class="imege1" src="/imeg/park1.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/park2.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/park4.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/hamburg-stadtpark7.jpg" alt=""></div>
+                                    <div class="som1" ><img class="imege1" src="imeg/park1.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/park2.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/park4.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/hamburg-stadtpark7.jpg" alt=""></div>
                                 </div>
                             </div>
                             <div class="txt1">Der Stadtpark Hamburg ist ein 148 Hektar großer öffentlicher Park im Stadtteil Winterhude im Bezirk Hamburg-Nord in Hamburg. Der 1914 eröffnete Park gilt als bedeutendes Beispiel für die Wandlung des deutschen Garten- und Landschaftsbaues vom Volksgarten zum Volkspark. <a href="https://de.wikipedia.org/wiki/Hamburger_Stadtpark">Wikipedia</a> <br>
@@ -118,10 +118,10 @@
                             <div class="imgCont">
                                 <img src="/imeg/elbphilharmonie2.jpg" alt="" class="img">
                                 <div class="somImg">
-                                    <div class="som1"><img class="imege1" src="/imeg/elbphilharmonie2.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/elbphilharmonie4.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/elbphilharmonie3.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/elbphilharmonie1.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/elbphilharmonie2.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/elbphilharmonie4.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/elbphilharmonie3.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/elbphilharmonie1.jpg" alt=""></div>
                                 </div>
                             </div>
                             <div class="txt1">Die Elbphilharmonie ist ein im November 2016 fertiggestelltes Konzerthaus in Hamburg. Sie wurde mit dem Ziel geplant, ein neues Wahrzeichen der Stadt und ein „Kulturdenkmal für alle“ zu 
@@ -141,10 +141,10 @@
                             <div class="imgCont">
                                 <img src="/imeg/hafen6.jpg" alt="" class="img">
                                 <div class="somImg">
-                                    <div class="som1"><img class="imege1" src="/imeg/img1.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/hafen5.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/hafen4.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/hafen7.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/img1.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/hafen5.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/hafen4.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/hafen7.jpg" alt=""></div>
                                 </div>
                             </div>
                             <div class="txt1">Der Hamburger Hafen ist ein offener Tidehafen an der Unterelbe in der Freien und Hansestadt Hamburg. Er ist der größte Seehafen in Deutschland und nach dem Hafen Rotterdam sowie dem Hafen von Antwerpen der drittgrößte in. <a href="https://de.wikipedia.org/wiki/Hamburger_Hafen">Wikipedia</a> <br>
@@ -161,10 +161,10 @@
                             <div class="imgCont">
                                 <img src="/imeg/alster2.jpg" alt="" class="img">
                                 <div class="somImg">
-                                    <div class="som1"><img class="imege1" src="/imeg/alster4.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/alster3.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/Die-Hamburger-Alster-5.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/hamburg-alster6.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/alster4.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/alster3.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/Die-Hamburger-Alster-5.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/hamburg-alster6.jpg" alt=""></div>
                                 </div>
                             </div>
                             <div class="txt1">Mit einer stattlichen Größe von 164 Hektar ist die Außenalster an allen Ufern ein beliebter Anlaufpunkt für Spaziergänge. Bei Joggern sind die Wege entlang des Gewässers ebenfalls beliebt und kleine Segelschiffe sowie die Alsterdampfer drehen ihre Runden auf dem Wasser. <br>
@@ -180,10 +180,10 @@
                             <div class="imgCont">
                                 <img src="/imeg/Rathaus1.jpg" alt="" class="img">
                                 <div class="somImg">
-                                    <div class="som1"><img class="imege1" src="/imeg/Rathaus2.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/Rathaus3.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/Rathaus4.jpg" alt=""></div>
-                                    <div class="som1"><img class="imege1" src="/imeg/Rathaus5.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/Rathaus2.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/Rathaus3.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/Rathaus4.jpg" alt=""></div>
+                                    <div class="som1"><img class="imege1" src="imeg/Rathaus5.jpg" alt=""></div>
                                 </div>
                             </div>
                             <div class="txt1">Das Hamburger Rathaus ist der Sitz der Hamburgischen Bürgerschaft und des Senats der Freien und Hansestadt Hamburg. Das architektonisch prachtvolle Gebäude an der Kleinen Alster wurde von 1886 bis 1897 im historistischen Stil der Neorenaissance errichtet. <a href="https://de.wikipedia.org/wiki/Hamburger_Rathaus">Wikipedia</a>  <br>
@@ -220,19 +220,19 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
 
-                        <img src="/imeg/miniaturwunderland-hamburg3.jpg" class='imeg'>
+                        <img src="imeg/miniaturwunderland-hamburg3.jpg" class='imeg'>
 
                     </div>
 
                     <div class="mySlides fade">
 
-                        <img src="/imeg/Miniaturwunderland-Hamburg2.jpg" class='imeg'>
+                        <img src="imeg/Miniaturwunderland-Hamburg2.jpg" class='imeg'>
 
                     </div>
 
                     <div class="mySlides fade">
 
-                        <img src="/imeg/Miniatur Wunderland4.jpeg" class='imeg'>
+                        <img src="imeg/Miniatur Wunderland4.jpeg" class='imeg'>
 
                     </div>
 
@@ -266,19 +266,19 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides1 fade">
 
-                        <img src="/imeg/der-hamburger-michel2.jpg" class='imeg'>
+                        <img src="imeg/der-hamburger-michel2.jpg" class='imeg'>
 
                     </div>
 
                     <div class="mySlides1 fade">
 
-                        <img src="/imeg/michel-02.jpg" class='imeg'>
+                        <img src="imeg/michel-02.jpg" class='imeg'>
 
                     </div>
 
                     <div class="mySlides1 fade">
 
-                        <img src="/imeg/illuminierter-michel-3.jpg" class='imeg'>
+                        <img src="imeg/illuminierter-michel-3.jpg" class='imeg'>
 
                     </div>
 
@@ -313,22 +313,22 @@
                 <div id="rotating">
                     <div class="flip ">
                         <div class="front trn">
-                            <img class="imgFl" src="/imeg/der-hamburger-michel2.jpg" alt="">
+                            <img class="imgFl" src="imeg/der-hamburger-michel2.jpg" alt="">
                         </div>
                         <div class="back trn">
-                            <img class="imgFl" src="/imeg/illuminierter-michel-3.jpg" alt="">
+                            <img class="imgFl" src="imeg/illuminierter-michel-3.jpg" alt="">
                         </div>
                         <div class="left trn">
-                            <img class="imgFl" src="/imeg/michel-02.jpg" alt="">
+                            <img class="imgFl" src="imeg/michel-02.jpg" alt="">
                         </div>
                         <div class="right trn">
-                            <img class="imgFl" src="/imeg/Michel_Hamburg3.jpg" alt="">
+                            <img class="imgFl" src="imeg/Michel_Hamburg3.jpg" alt="">
                         </div>
                         <div class="top">
-                            <img class="imgFl" src="/imeg/img5.jpg" alt="">
+                            <img class="imgFl" src="imeg/img5.jpg" alt="">
                         </div>
                         <div class="botton">
-                            <img class="imgFl" src="/imeg/img7.jpg" alt="">
+                            <img class="imgFl" src="imeg/img7.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
 <noscript>Not seeing a <a href="https://www.scrolltotop.com/">Scroll to Top Button</a>? Go to our FAQ page for more info.</noscript>
 
 
-    <script src="./js/index1.js"></script>
+    <script src="/js/index1.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBimrByamnQ4474OquXxMk2U_tM2tw7a-w&callback=myMap"
         async defer></script>
      <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzxtsK9_uBaFBdMfBrWJhHEVF8_MRLcYo&callback=mapMin" async
