--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h4 id="titels">hamburg Elbphilharmonie</h4>
                         <div class="model">
                             <div class="imgCont">
-                                <img src="/imeg/elbphilharmonie2.jpg" alt="" class="img">
+                                <img src="imeg/elbphilharmonie2.jpg" alt="" class="img">
                                 <div class="somImg">
                                     <div class="som1"><img class="imege1" src="imeg/elbphilharmonie2.jpg" alt=""></div>
                                     <div class="som1"><img class="imege1" src="imeg/elbphilharmonie4.jpg" alt=""></div>
@@ -139,7 +139,7 @@
                         <h4 id="titels">Hamburg Hafen</h4>
                         <div class="model">
                             <div class="imgCont">
-                                <img src="/imeg/hafen6.jpg" alt="" class="img">
+                                <img src="imeg/hafen6.jpg" alt="" class="img">
                                 <div class="somImg">
                                     <div class="som1"><img class="imege1" src="imeg/img1.jpg" alt=""></div>
                                     <div class="som1"><img class="imege1" src="imeg/hafen5.jpg" alt=""></div>
@@ -159,7 +159,7 @@
                         <h4 id="titels">Hamburger Alster</h4>
                         <div class="model">
                             <div class="imgCont">
-                                <img src="/imeg/alster2.jpg" alt="" class="img">
+                                <img src="imeg/alster2.jpg" alt="" class="img">
                                 <div class="somImg">
                                     <div class="som1"><img class="imege1" src="imeg/alster4.jpg" alt=""></div>
                                     <div class="som1"><img class="imege1" src="imeg/alster3.jpg" alt=""></div>
@@ -178,7 +178,7 @@
                         <h4 id="titels">Hamburger Rathaus</h4>
                         <div class="model">
                             <div class="imgCont">
-                                <img src="/imeg/Rathaus1.jpg" alt="" class="img">
+                                <img src="imeg/Rathaus1.jpg" alt="" class="img">
                                 <div class="somImg">
                                     <div class="som1"><img class="imege1" src="imeg/Rathaus2.jpg" alt=""></div>
                                     <div class="som1"><img class="imege1" src="imeg/Rathaus3.jpg" alt=""></div>
@@ -342,7 +342,7 @@
 <noscript>Not seeing a <a href="https://www.scrolltotop.com/">Scroll to Top Button</a>? Go to our FAQ page for more info.</noscript>
 
 
-    <script src="/js/index1.js"></script>
+    <script src="js/index1.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBimrByamnQ4474OquXxMk2U_tM2tw7a-w&callback=myMap"
         async defer></script>
      <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzxtsK9_uBaFBdMfBrWJhHEVF8_MRLcYo&callback=mapMin" async
