--- a/news-hambur.html
+++ b/news-hambur.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/news-hamburg.js"></script>
+    <script src="js/news-hamburg.js"></script>
 </head>
 <body>
     <div id="res"></div>
