--- a/abaut.html
+++ b/abaut.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/abaut.css">
-    <script src="js/abaut.js"></script>
+    <script src="/js/abaut.js"></script>
     <title>Document</title>
 </head>
 <body>
