--- a/ex.html
+++ b/ex.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/news.css">
     <link rel="stylesheet" href="./css/index1.css">
     
-    <script src="/js/ex.js"></script>
+    <script src="./js/ex.js"></script>
     <title>Document</title>
 </head>
 <body>
