--- a/abaut.html
+++ b/abaut.html
@@ -42,7 +42,7 @@
             <div id="right"></div>
             <div class="navAbaut">
                 <ul class="navUl">
-                    <li><a href="index.html">Toerisme</a></li>
+                    <li><a href="index.html">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
                     <li><a href="hospitals.html">Hospitals</a></li>
                     
