--- a/hospitals.html
+++ b/hospitals.html
@@ -25,7 +25,7 @@
             <div class="temp"></div>
             <ul>
 
-                <li><a href="index.html">Toerisme</a></li>
+                <li><a href="index.html">Tourism</a></li>
                 <li><a href="news.html">News</a></li> 
                 <li><a href="hospitals.html">Hospitals</a></li>
                 <li><a href="abaut.html">About</a></li> 
