--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="temp"></div>
                 <ul>
 
-                    <li><a href="#">Toerisme</a></li>
+                    <li><a href="#">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
                     <li><a href="hospitals.html">Hospitals</a></li>
                     <li><a href="abaut.html">About</a></li>
