--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <li><a href="#">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
-                    <li><a href="hospitals.html">Hospitals</a></li>
+                    <li><a href="hospitals.html">Heaith</a></li>
                     <li><a href="abaut.html">About</a></li>
                     
 
