--- a/ex.html
+++ b/ex.html
@@ -28,7 +28,7 @@
 
                     <li><a href="index.html">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
-                    <li><a href="hospitals.html">Hospitals</a></li>
+                    <li><a href="hospitals.html">Heaith</a></li>
                     <li><a href="abaut.html">About</a></li>
 
                 </ul>
