--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
 
                     <li><a href="index.html">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
-                    <li><a href="hospitals.html">Hospitals</a></li>
+                    <li><a href="hospitals.html">Heaith</a></li>
                     <li><a href="abaut.html">About</a></li> 
                     <!-- <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>  -->
