--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                                     <div class="som1"><img class="imege1" src="imeg/hamburg-stadtpark7.jpg" alt=""></div>
                                 </div>
                             </div>
-                            <div class="txt1">Der Stadtpark Hamburg ist ein 148 Hektar großer öffentlicher Park im Stadtteil Winterhude im Bezirk Hamburg-Nord in Hamburg. Der 1914 eröffnete Park gilt als bedeutendes Beispiel für die Wandlung des deutschen Garten- und Landschaftsbaues vom Volksgarten zum Volkspark. <a href="https://de.wikipedia.org/wiki/Hamburger_Stadtpark">Wikipedia</a> <br>
-                                Adresse: <a href="https://www.google.com/maps/dir/53.5070439,10.2101018/stadtpark+hamburg">Stadtpark, Hamburg</a> 
+                            <div class="txt1">Der Stadtpark Hamburg ist ein 148 Hektar großer öffentlicher Park im Stadtteil Winterhude im Bezirk Hamburg-Nord in Hamburg. Der 1914 eröffnete Park gilt als bedeutendes Beispiel für die Wandlung des deutschen Garten- und Landschaftsbaues vom Volksgarten zum Volkspark. <a target="_blank" href="https://de.wikipedia.org/wiki/Hamburger_Stadtpark">Wikipedia</a> <br>
+                                Adresse: <a target="_blank" href="https://www.google.com/maps/dir/53.5070439,10.2101018/stadtpark+hamburg">Stadtpark, Hamburg</a> 
                             </div>
                             <span class="close">X</span>
                         </div>
@@ -125,8 +125,8 @@
                                 </div>
                             </div>
                             <div class="txt1">Die Elbphilharmonie ist ein im November 2016 fertiggestelltes Konzerthaus in Hamburg. Sie wurde mit dem Ziel geplant, ein neues Wahrzeichen der Stadt und ein „Kulturdenkmal für alle“ zu 
-                                 <a href="https://de.wikipedia.org/wiki/Elbphilharmonie">Wikipedia</a> <br>
-                                Adresse: <a href="https://www.google.com/maps/place/Platz+der+Deutschen+Einheit+4,+20457+Hamburg">Platz der Deutschen Einheit 4, 20457 Hamburg</a>  <br>
+                                 <a target="_blank" href="https://de.wikipedia.org/wiki/Elbphilharmonie">Wikipedia</a> <br>
+                                Adresse: <a target="_blank" href="https://www.google.com/maps/place/Platz+der+Deutschen+Einheit+4,+20457+Hamburg">Platz der Deutschen Einheit 4, 20457 Hamburg</a>  <br>
                                 Eröffnet: 11. Januar 2017 <br>
                                 Kapazität: 2.100 <br>
                                 Baukosten: 866 Millionen EUR <br>
@@ -147,9 +147,9 @@
                                     <div class="som1"><img class="imege1" src="imeg/hafen7.jpg" alt=""></div>
                                 </div>
                             </div>
-                            <div class="txt1">Der Hamburger Hafen ist ein offener Tidehafen an der Unterelbe in der Freien und Hansestadt Hamburg. Er ist der größte Seehafen in Deutschland und nach dem Hafen Rotterdam sowie dem Hafen von Antwerpen der drittgrößte in. <a href="https://de.wikipedia.org/wiki/Hamburger_Hafen">Wikipedia</a> <br>
+                            <div class="txt1">Der Hamburger Hafen ist ein offener Tidehafen an der Unterelbe in der Freien und Hansestadt Hamburg. Er ist der größte Seehafen in Deutschland und nach dem Hafen Rotterdam sowie dem Hafen von Antwerpen der drittgrößte in. <a target="_blank" href="https://de.wikipedia.org/wiki/Hamburger_Hafen">Wikipedia</a> <br>
                                 Gründung: 7. Mai 1189, Hamburg <br>
-                                Ort: <a href="https://www.google.com/maps/place/Hamburger+Hafen">Hamburg Hafen</a>  <br>
+                                Ort: <a target="_blank" href="https://www.google.com/maps/place/Hamburger+Hafen">Hamburg Hafen</a>  <br>
                                 Eigentümer: Hamburg Port Authority
                             </div>
                             <span class="close">X</span>
@@ -168,8 +168,8 @@
                                 </div>
                             </div>
                             <div class="txt1">Mit einer stattlichen Größe von 164 Hektar ist die Außenalster an allen Ufern ein beliebter Anlaufpunkt für Spaziergänge. Bei Joggern sind die Wege entlang des Gewässers ebenfalls beliebt und kleine Segelschiffe sowie die Alsterdampfer drehen ihre Runden auf dem Wasser. <br>
-                                 <a href="https://de.wikipedia.org/wiki/Jungfernstieg"> Wikipedia</a>
-                                Adresse: <a href="https://www.google.com/maps/place/Jungfernstieg,+Hamburg"> Jungfernstieg</a>
+                                 <a target="_blank" href="https://de.wikipedia.org/wiki/Jungfernstieg"> Wikipedia</a>
+                                Adresse: <a target="_blank" href="https://www.google.com/maps/place/Jungfernstieg,+Hamburg"> Jungfernstieg</a>
                             </div>
                             <span class="close">X</span>
                         </div>
@@ -186,8 +186,8 @@
                                     <div class="som1"><img class="imege1" src="imeg/Rathaus5.jpg" alt=""></div>
                                 </div>
                             </div>
-                            <div class="txt1">Das Hamburger Rathaus ist der Sitz der Hamburgischen Bürgerschaft und des Senats der Freien und Hansestadt Hamburg. Das architektonisch prachtvolle Gebäude an der Kleinen Alster wurde von 1886 bis 1897 im historistischen Stil der Neorenaissance errichtet. <a href="https://de.wikipedia.org/wiki/Hamburger_Rathaus">Wikipedia</a>  <br>
-                                Adresse: <a href="https://www.google.com/maps/place/Rathausmarkt+1,+20095+Hamburg">Rathausmarkt 1, 20095 Hamburg</a>  <br>
+                            <div class="txt1">Das Hamburger Rathaus ist der Sitz der Hamburgischen Bürgerschaft und des Senats der Freien und Hansestadt Hamburg. Das architektonisch prachtvolle Gebäude an der Kleinen Alster wurde von 1886 bis 1897 im historistischen Stil der Neorenaissance errichtet. <a target="_blank" href="https://de.wikipedia.org/wiki/Hamburger_Rathaus">Wikipedia</a>  <br>
+                                Adresse: <a target="_blank" href="https://www.google.com/maps/place/Rathausmarkt+1,+20095+Hamburg">Rathausmarkt 1, 20095 Hamburg</a>  <br>
                                 Eröffnet: 26. Oktober 1897 <br>
                                 Architektonische Höhe: 112 m
                                 </div>
@@ -210,8 +210,8 @@
                         15.400 Meter Gleise, 4.340 Häuser und Brücken wurden von mehr als 300 Mitarbeitern in über
                         795.000 Arbeitsstunden liebevoller Kleinstarbeit aufgestellt. In dieser Modellbaulandschaft der
                         Superlative sehen Sie realistische, komplett vom Computer gesteuerte. <br>
-                        Sie befindet sich in der historischen Speicherstadt und wird von der Miniatur Wunderland Hamburg GmbH betrieben. <a href="https://de.wikipedia.org/wiki/Miniatur_Wunderland">Wikipedia</a> 
-                        Adresse: <a href="https://www.google.com/maps/place/Kehrwieder+2%2F4+%2F+Block,+20457+Hamburg">Kehrwieder 2-4/Block D, 20457 Hamburg</a>  </h3>
+                        Sie befindet sich in der historischen Speicherstadt und wird von der Miniatur Wunderland Hamburg GmbH betrieben. <a target="_blank" href="https://de.wikipedia.org/wiki/Miniatur_Wunderland">Wikipedia</a> 
+                        Adresse: <a target="_blank" href="https://www.google.com/maps/place/Kehrwieder+2%2F4+%2F+Block,+20457+Hamburg">Kehrwieder 2-4/Block D, 20457 Hamburg</a>  </h3>
                     <div id="mapNin"></div>
                 </div>
 
@@ -255,8 +255,8 @@
                     <h3 class="text4">Die evangelische Hauptkirche Sankt Michaelis ist der bekannteste Kirchenbau von
                         Hamburg und gilt als bedeutendste Barockkirche Norddeutschlands. Für die Schifffahrt auf der
                         Elbe stellt der weithin sichtbare Sakralbau mit seiner markanten Architektur seit langem das 
-                        Wahrzeichen der Hansestadt . <a href="https://de.wikipedia.org/wiki/Hauptkirche_Sankt_Michaelis_(Hamburg)">Wikipedia</a> <br>
-                        Adresse: <a href="https://www.google.com/maps/place/Hauptkirche+St.+Michaelis,+Englische+Planke+1,+20459+Hamburg">Englische Planke 1, 20459 Hamburg </a> <br>
+                        Wahrzeichen der Hansestadt . <a target="_blank" href="https://de.wikipedia.org/wiki/Hauptkirche_Sankt_Michaelis_(Hamburg)">Wikipedia</a> <br>
+                        Adresse: <a target="_blank" href="https://www.google.com/maps/place/Hauptkirche+St.+Michaelis,+Englische+Planke+1,+20459+Hamburg">Englische Planke 1, 20459 Hamburg </a> <br>
                         Architektonische Höhe: 132 m Council on Tall Buildings and Urban Habitat
                         Eröffnet: 1912</h3>
                 </div>
@@ -295,8 +295,8 @@
             <!-- ////((((((///))))))////// -->
             <div id="cont4">
                 <div class="text4"><h3> Planten un Blomen ist eine etwa 47 Hektar große Parkanlage im Zentrum von Hamburg. Der Name ist plattdeutsch und bedeutet „Pflanzen und Blumen“. Der Gründer und erste Direktor des Botanischen Gartens in den Hamburger Wallanlagen, Johann Georg Christian Lehmann, pflanzte am 6. <br>
-                    <a href="https://de.wikipedia.org/wiki/Planten_un_Blomen">Wikipedia</a> <br>
-                    Adresse: <a href="https://www.google.com/maps/place/Marseiller+Str.,+20355+Hamburg">Marseiller Str., 20355 Hamburg</a>  </h3>
+                    <a target="_blank" href="https://de.wikipedia.org/wiki/Planten_un_Blomen">Wikipedia</a> <br>
+                    Adresse: <a target="_blank" href="https://www.google.com/maps/place/Marseiller+Str.,+20355+Hamburg">Marseiller Str., 20355 Hamburg</a>  </h3>
                 </div>
                 <div class="sliderImg4">
                     <div class="imgSlid1 conSlid"></div>
