--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index1.css">
-   
+    <title>Tourism in Hamburg</title>
     <script src="https://kit.fontawesome.com/92e7e0772a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -313,16 +313,16 @@
                 <div id="rotating">
                     <div class="flip ">
                         <div class="front trn">
-                            <img class="imgFl" src="imeg/der-hamburger-michel2.jpg" alt="">
+                            <img class="imgFl" src="imeg/hamburg-b2.jpg" alt="">
                         </div>
                         <div class="back trn">
-                            <img class="imgFl" src="imeg/illuminierter-michel-3.jpg" alt="">
+                            <img class="imgFl" src="imeg/hamburg-b3.jpg" alt="">
                         </div>
                         <div class="left trn">
-                            <img class="imgFl" src="imeg/michel-02.jpg" alt="">
+                            <img class="imgFl" src="imeg/hamburg-b4.jpg" alt="">
                         </div>
                         <div class="right trn">
-                            <img class="imgFl" src="imeg/Michel_Hamburg3.jpg" alt="">
+                            <img class="imgFl" src="imeg/hamburg-b5.jpg" alt="">
                         </div>
                         <div class="top">
                             <img class="imgFl" src="imeg/img5.jpg" alt="">
