--- a/abaut.html
+++ b/abaut.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/abaut.css">
     <script src="./js/abaut.js"></script>
-    <title>Document</title>
+    <title>Abaut</title>
 </head>
 <body>
    
