--- a/ex.html
+++ b/ex.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index1.css">
     
     <script src="./js/ex.js"></script>
-    <title>Document</title>
+    <title>news Hamburg</title>
 </head>
 <body>
     <div class="contNew">
