--- a/abaut.html
+++ b/abaut.html
@@ -44,7 +44,7 @@
                 <ul class="navUl">
                     <li><a href="index.html">Tourism</a></li>
                     <li><a href="news.html">News</a></li> 
-                    <li><a href="hospitals.html">Heaith</a></li>
+                    <li><a href="hospitals.html">Health</a></li>
                     
                 </ul>
             </div>
