--- a/ex.html
+++ b/ex.html
@@ -47,8 +47,9 @@
         </div>
         <div class="mar"></div>
             <div class="contNachrecht">
-            <div id="nachrecht"></div>
-        <div id="res1"></div>
+                <div id="res1"></div>
+            <!-- <div id="nachrecht"></div> -->
+       
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
